--- a/app/src/main/res/drawable/theme_option_selected.xml
+++ b/app/src/main/res/drawable/theme_option_selected.xml
@@ -2,5 +2,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners android:radius="8dp"/>
-    <stroke android:color="@color/black" android:width="2dp"/>
+    <stroke android:color="#ffba2e" android:width="2dp"/>
 </shape>
