--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,7 +17,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:navGraph="@navigation/nav_graph"
-        android:background="#f7f7f7"
-        android:backgroundTint="#f7f7f7"/>
+        android:background="?attr/backgroundColor"
+        android:backgroundTint="?attr/backgroundColor"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
