--- a/app/src/main/res/layout/dialog_input.xml
+++ b/app/src/main/res/layout/dialog_input.xml
@@ -3,7 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:padding="16dp">
+    android:padding="16dp"
+    android:background="?attr/cardBackgroundColor">
 
     <EditText
         android:id="@+id/dialogInput"
@@ -12,6 +13,8 @@
         android:fontFamily="@font/google_sans"
         android:inputType="text"
         android:minHeight="48dp"
-        android:textSize="16sp" />
+        android:textSize="16sp"
+        android:textColor="?attr/textColorPrimary"
+        android:backgroundTint="?attr/textColorSecondary" />
 
 </LinearLayout>
