--- a/app/src/main/res/layout/fragment_todo_list.xml
+++ b/app/src/main/res/layout/fragment_todo_list.xml
@@ -5,9 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".fragments.TodoListFragment"
-    android:background="#f7f7f7"
+    android:background="?attr/backgroundColor"
     android:layout_marginHorizontal="10sp"
-    android:backgroundTint="#f7f7f7">
+    android:backgroundTint="?attr/backgroundColor">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appBarLayout"
@@ -19,7 +19,7 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="#f7f7f7">
+            android:background="?attr/backgroundColor">
 
             <!-- Add these selection mode buttons -->
             <TextView
@@ -32,7 +32,7 @@
                 android:contentDescription="Cancel Selection"
                 android:padding="12dp"
                 android:text="&#xf00d;"
-                android:textColor="#4A4A4A"
+                android:textColor="?attr/textColorPrimary"
                 android:textSize="20sp"
                 android:visibility="gone"/>
 
@@ -46,7 +46,7 @@
                 android:contentDescription="Select All"
                 android:padding="12dp"
                 android:text="&#xf0ae;"
-                android:textColor="#4A4A4A"
+                android:textColor="?attr/textColorPrimary"
                 android:textSize="20sp"
                 android:layout_marginRight="16sp"
                 android:visibility="gone"/>
@@ -61,7 +61,7 @@
                 android:contentDescription="Manage Categories"
                 android:padding="12dp"
                 android:text="&#xf013;"
-                android:textColor="#4A4A4A"
+                android:textColor="?attr/textColorPrimary"
                 android:textSize="20sp"
                 android:layout_marginRight="16sp"/>
 
@@ -75,7 +75,7 @@
                 android:contentDescription="Manage Categories"
                 android:padding="12dp"
                 android:text="&#xe185;"
-                android:textColor="#4A4A4A"
+                android:textColor="?attr/textColorPrimary"
                 android:textSize="20sp" />
 
         </androidx.appcompat.widget.Toolbar>
@@ -88,6 +88,7 @@
         android:text="Todoo"
         android:textSize="32sp"
         android:textStyle="bold"
+        android:textColor="?attr/textColorPrimary"
         android:fontFamily="@font/google_sans"
         app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
         app:layout_constraintStart_toStartOf="parent"
@@ -95,23 +96,22 @@
 
     <androidx.appcompat.widget.SearchView
         android:id="@+id/searchView"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_width="363dp"
+        android:layout_height="50dp"
         android:layout_marginHorizontal="16dp"
         android:layout_marginTop="16dp"
-        android:layout_marginBottom="16dp"
         android:background="@drawable/search_rounded_background"
-        app:queryHint="Search notes"
-        app:iconifiedByDefault="false"
-        app:queryBackground="@android:color/transparent"
-        app:searchIcon="@drawable/ic_search"
-        app:closeIcon="@null"
         android:focusable="false"
+        android:text="bold"
+        android:textColor="?attr/textColorSecondary"
+        app:closeIcon="@null"
+        app:iconifiedByDefault="false"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/title"
-        android:text="bold"
-        android:textColor="#8e8e8e"/>
+        app:queryBackground="@android:color/transparent"
+        app:queryHint="Search notes"
+        app:searchIcon="@drawable/ic_search" />
 
     <HorizontalScrollView
         android:id="@+id/categoryScrollView"
@@ -158,7 +158,7 @@
         android:layout_height="wrap_content"
         android:text="\uf023"
         android:textSize="24sp"
-        android:textColor="#4A4A4A"
+        android:textColor="?attr/textColorPrimary"
         android:fontFamily="@font/fa_free_solid_400"
         android:visibility="gone"
         android:elevation="10dp"
@@ -166,8 +166,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="64dp" />
-
-
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/btnAdd"
@@ -192,7 +190,7 @@
         android:gravity="center"
         android:padding="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:background="#F7F7F7">
+        android:background="?attr/backgroundColor">
 
         <LinearLayout
             android:id="@+id/action_move_container"
@@ -210,7 +208,7 @@
                 android:gravity="center"
                 android:padding="8dp"
                 android:text="&#xf07b;"
-                android:textColor="#4A4A4A"
+                android:textColor="?attr/textColorPrimary"
                 android:textSize="24sp" />
 
             <TextView
@@ -218,7 +216,7 @@
                 android:layout_height="wrap_content"
                 android:text="Move"
                 android:textSize="12sp"
-                android:textColor="#4A4A4A" />
+                android:textColor="?attr/textColorPrimary" />
         </LinearLayout>
 
         <LinearLayout
@@ -237,7 +235,7 @@
                 android:gravity="center"
                 android:padding="8dp"
                 android:text="&#xf1f8;"
-                android:textColor="#4A4A4A"
+                android:textColor="?attr/textColorPrimary"
                 android:textSize="24sp" />
 
             <TextView
@@ -245,7 +243,7 @@
                 android:layout_height="wrap_content"
                 android:text="Delete"
                 android:textSize="12sp"
-                android:textColor="#4A4A4A" />
+                android:textColor="?attr/textColorPrimary" />
         </LinearLayout>
 
         <LinearLayout
@@ -264,7 +262,7 @@
                 android:gravity="center"
                 android:padding="8dp"
                 android:text="&#xf023;"
-                android:textColor="#4A4A4A"
+                android:textColor="?attr/textColorPrimary"
                 android:textSize="24sp" />
 
             <TextView
@@ -272,7 +270,7 @@
                 android:layout_height="wrap_content"
                 android:text="Hide"
                 android:textSize="12sp"
-                android:textColor="#4A4A4A" />
+                android:textColor="?attr/textColorPrimary" />
         </LinearLayout>
 
         <LinearLayout
@@ -291,7 +289,7 @@
                 android:gravity="center"
                 android:padding="8dp"
                 android:text="&#xf08d;"
-                android:textColor="#4A4A4A"
+                android:textColor="?attr/textColorPrimary"
                 android:textSize="24sp" />
 
             <TextView
@@ -300,7 +298,7 @@
                 android:layout_height="wrap_content"
                 android:text="Pin"
                 android:textSize="12sp"
-                android:textColor="#4A4A4A" />
+                android:textColor="?attr/textColorPrimary" />
         </LinearLayout>
     </LinearLayout>
 
