--- a/app/src/main/res/layout/item_theme_option_larger.xml
+++ b/app/src/main/res/layout/item_theme_option_larger.xml
@@ -19,6 +19,7 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:textSize="16sp"
+        android:textColor="?attr/textColorPrimary"
         android:fontFamily="@font/google_sans" />
 
 </LinearLayout>
