--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -33,4 +33,9 @@
     <color name="gray_300">#E0E0E0</color>
     <color name="gray_600">#757575</color>
     <color name="primary_light">#BB86FC</color>
+
+    <color name="status_bar_color">#f7f7f7</color>
+    <color name="navigation_bar_color">#f7f7f7</color>
+    <color name="status_bar_color_dark">#121212</color>
+    <color name="navigation_bar_color_dark">#121212</color>
 </resources>
