--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,25 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="CustomPopupMenuStyle" parent="Widget.AppCompat.PopupMenu">
-        <item name="android:popupBackground">@drawable/popup_menu_background</item>
-        <item name="android:overlapAnchor">true</item>
-    </style>
-
-    <style name="SortDropdownStyle" parent="Widget.AppCompat.PopupMenu.Overflow">
-        <item name="android:popupBackground">@android:color/white</item>
-        <item name="android:dropDownHorizontalOffset">0dp</item>
-        <item name="android:dropDownVerticalOffset">0dp</item>
-    </style>
-
-    <style name="CustomMenuTheme" parent="Theme.AppCompat.Light">
-        <item name="popupMenuStyle">@style/CustomPopupMenuStyle</item>
-    </style>
-
-    <style name="CustomDropdownTheme" parent="Theme.AppCompat.Light">
-        <item name="popupMenuStyle">@style/SortDropdownStyle</item>
-    </style>
-
-    <style name="WhiteAlertDialog" parent="ThemeOverlay.MaterialComponents.MaterialAlertDialog">
-        <item name="colorSurface">@android:color/white</item>
-    </style>
+    <!-- Common style attributes -->
+    <attr name="backgroundColor" format="color" />
+    <attr name="textColorPrimary" format="color" />
+    <attr name="textColorSecondary" format="color" />
+    <attr name="cardBackgroundColor" format="color" />
+    <attr name="searchBarBackground" format="color" />
+    <attr name="dividerColor" format="color" />
 </resources>
