--- a/app/src/main/res/layout/fragment_todo_list.xml
+++ b/app/src/main/res/layout/fragment_todo_list.xml
@@ -78,6 +78,19 @@
                 android:textColor="?attr/textColorPrimary"
                 android:textSize="20sp" />
 
+            <TextView
+                android:id="@+id/btnTest"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end"
+                android:background="@drawable/back_button_ripple"
+                android:fontFamily="@font/fa_free_solid_400"
+                android:contentDescription="Manage Categories"
+                android:padding="12dp"
+                android:text="&#xe12;"
+                android:textColor="?attr/textColorPrimary"
+                android:textSize="20sp" />
+
         </androidx.appcompat.widget.Toolbar>
     </com.google.android.material.appbar.AppBarLayout>
 
