--- a/app/src/main/res/layout/dialog_test_input.xml
+++ b/app/src/main/res/layout/dialog_test_input.xml
@@ -13,4 +13,11 @@
         android:hint="Enter name"
         android:inputType="text"/>
 
+    <EditText
+        android:id="@+id/etPrice"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Price"
+        android:inputType="numberDecimal"
+        android:layout_marginTop="8dp"/>
 </LinearLayout>
