--- a/app/src/main/res/layout/item_test.xml
+++ b/app/src/main/res/layout/item_test.xml
@@ -15,6 +15,7 @@
         android:gravity="center_vertical"
         android:padding="16dp">
 
+
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -49,6 +50,13 @@
                 android:layout_height="wrap_content"
                 android:textSize="14sp"
                 android:layout_marginTop="4dp"/>
+
+            <ImageView
+                android:id="@+id/ivTestImage"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:scaleType="centerCrop"
+                android:layout_marginEnd="16dp"/>
         </LinearLayout>
 
         <ImageButton
